--- a/projects/dailyuxwritingchallenge.html
+++ b/projects/dailyuxwritingchallenge.html
@@ -96,7 +96,7 @@
           <p>With the headline, I wanted to celebrate the user for balancing all they have going on in life while still
             being a devoted fan.</p>
           <br>
-          <p>Because, this is a peron without a lot of time, I am direct with the beneifts. I also assure them it's a
+          <p>Because this is a peron without a lot of time, I am direct with the beneifts. I also assure them it's a
             low-effort relationship with the app. Set it and we'll never let you forget it (in a good way).</p>
           <br>
           <p>The CTA cuts right into the action to get them set up.</p>
@@ -126,6 +126,46 @@
           <br>
           <p>So instead I tell the user what the problem is and what to do next. I keep it brief but conversational. The
             tone is direct and neutral, not negative or accusatory.</p>
+
+          <!-- Day 4 -->
+          <hr>
+          <h2>Day 4</h2>
+          <br>
+          <p><strong>Scenario:</strong> A user is in their favorite supermarket. They open the supermarket’s app on
+            their phone to see what’s on sale and are greeted by a promotion.</p>
+          <br>
+          <p><strong>Challenge:</strong> Write a promotional home screen for a subscription service that delivers
+            groceries to the user once-a-month for a flat fee.</p>
+          <br>
+          <p>Headline: 45 characters max</p>
+          <p>Body: 175 characters max</p>
+          <p>Button(s): 25 characters max</p>
+          <br>
+          <p><strong>Solution:</strong></p>
+          <br>
+          <div class="centered-img-container">
+            <figure>
+              <img class="framed" src="../images/duxwc/duxwc_4.svg" />
+              <figcaption>Fig 4. Subscription promotion interstitial.</figcaption>
+            </figure>
+          </div>
+          <br>
+          <p><strong>Explanation:</strong></p>
+          <br>
+          <p>A shopper may have any number of reasons why they might like outsourcing their grocery shopping. I didn't
+            want to project generic speculative situations like "don't have time for shopping?" because they may or may
+            not relate. So instead, in the headline, I just let them know grocery shopping is something we'd be excited
+            to do for them, for whatever reason they may need it.</p>
+          <br>
+          <p>The body could have gone two directions: tell them more about the beneifts or address questions about how
+            (not) complicated it is to use the service. I went with the later. I try to answer the immediate questions
+            like "when would I get my groceries?" and "can I still use coupons?". Knowing how easy the set up is
+            might sway someone to tap the sign up button right away.</p>
+          <br>
+          <p>Still, I offer the first button for this kind of scenario: the user opens the app while they are in the
+            store. They're not going to sign up for a grocery shoppin service while they are already mid-shopping. But
+            they may want to be reminded of it when the open the app at home.</p>
+          <br>
 
         </section>
       </div>
