--- a/projects/dailyuxwritingchallenge.html
+++ b/projects/dailyuxwritingchallenge.html
@@ -211,6 +211,37 @@
             provide would be helpful. Their work is safe, but the whole circumstance is still an inconvenient
             interruption that is in everyone's interest to fix. In the primary action, they can get straight back to
             work, but we still offer the option to send us a report if they are willing.</p>
+          <!-- Day 6 -->
+          <hr>
+          <h2>Day 6</h2>
+          <br>
+          <p><strong>Scenario:</strong> It’s Monday. A user has just gotten into their car to drive to work. They plug
+            their phone into the car and start driving.</p>
+          <br>
+          <p><strong>Challenge:</strong> How would you let the user know there’s a fire happening in a nearby town that
+            is causing road closures? The effect on their commute is unknown, but there is a definite danger if the fire
+            gets closer. How do you communicate this to them? When? Write it.</p>
+          <br>
+          <p>Headline: 30 characters max</p>
+          <p>Body: 45 characters max</p>
+          <br>
+          <p><strong>Solution:</strong></p>
+          <br>
+          <div class="centered-img-container">
+            <figure>
+              <img src="../images/duxwc/duxwc_6.jpg" />
+              <figcaption>Fig 6. Alert notification.</figcaption>
+            </figure>
+          </div>
+          <br>
+          <p><strong>Explanation:</strong></p>
+          <br>
+          <p>A push notification is the best way to relay an alert to a user as it does not require them to unlock their
+            phone or open an app. They see (or hear or feel, depending on sound and haptic preferences) it right
+            away. If the user is driving, they can only afford a glance, so the information must be succint and direct.
+            This notification was designed with the idea that a user may tap it to open their navigation app which
+            might suggest alternative routes with estimated commute times and/or visually display.</p>
+          <br>
         </section>
       </div>
     </main>
