--- a/projects/dailyuxwritingchallenge.html
+++ b/projects/dailyuxwritingchallenge.html
@@ -230,7 +230,7 @@
           <div class="centered-img-container">
             <figure>
               <img src="../images/duxwc/duxwc_6.jpg" />
-              <figcaption>Fig 6. Alert notification.</figcaption>
+              <figcaption>Fig 6. Navigation alert.</figcaption>
             </figure>
           </div>
           <br>
@@ -241,6 +241,36 @@
             away. If the user is driving, they can only afford a glance, so the information must be succint and direct.
             This notification was designed with the idea that a user may tap it to open their navigation app which
             might suggest alternative routes with estimated commute times and/or visually display.</p>
+          <br>
+          <!-- Day 7 -->
+          <hr>
+          <h2>Day 7</h2>
+          <br>
+          <p><strong>Scenario:</strong> A sports fan is at a wedding while their favorite team is playing against their
+            arch-rivals. Their team scores.</p>
+          <br>
+          <p><strong>Challenge:</strong> How would you, quickly, let the sports fan know about the latest play, the
+            current score, and the key players? Write it.</p>
+          <br>
+          <p>Headline: 30 characters max</p>
+          <p>Body: 45 characters max</p>
+          <br>
+          <p><strong>Solution:</strong></p>
+          <br>
+          <div class="centered-img-container">
+            <figure>
+              <img src="../images/duxwc/duxwc_7.jpg" />
+              <figcaption>Fig 6. Sports app push notification.</figcaption>
+            </figure>
+          </div>
+          <br>
+          <p><strong>Explanation:</strong></p>
+          <br>
+          <p>For an at-a-glance update, a push notification is the best way to reach the user. I started with an
+            exclamation "Goal!" so the user knows what has happened. Then I give the current score so they have context.
+            This is one space I feel like using jargon can be appropriate - fans of the sport are likely
+            already familiar enough with the specialized or slang terminology which helps describe the gist of the play.
+          </p>
           <br>
         </section>
       </div>
