fixed image sizing issue for moble view

--- a/projects/dailyuxwritingchallenge.html
+++ b/projects/dailyuxwritingchallenge.html
@@ -44,7 +44,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img class="framed" src="../images/duxwc/duxwc_1.svg" />
               <figcaption>Fig 1. Flight cancellation notification.</figcaption>
@@ -84,7 +84,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img class="framed" src="../images/duxwc/duxwc_2.svg" />
               <figcaption>Fig 2. Sports app promotional screen.</figcaption>
@@ -112,7 +112,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img class="framed" src="../images/duxwc/duxwc_3.svg" />
               <figcaption>Fig 3. Incorrect email error microcopy.</figcaption>
@@ -143,7 +143,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img class="framed" src="../images/duxwc/duxwc_4.svg" />
               <figcaption>Fig 4. Subscription promotion interstitial.</figcaption>
@@ -182,7 +182,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img class="framed" src="../images/duxwc/duxwc_5a.svg" />
               <figcaption>Fig 5a. Unrecoverable error.</figcaption>
@@ -190,7 +190,7 @@
           </div>
           <br>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img class="framed" src="../images/duxwc/duxwc_5b.svg" />
               <figcaption>Fig 5b. Saved progress message.</figcaption>
@@ -227,7 +227,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_6.jpg" />
               <figcaption>Fig 6. Navigation alert.</figcaption>
@@ -257,7 +257,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_7.jpg" />
               <figcaption>Fig 7. Sports app push notification.</figcaption>
@@ -288,7 +288,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_8.jpg" />
               <figcaption>Fig 8. In-app performance promotion</figcaption>
@@ -328,7 +328,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_9.jpg" />
               <figcaption>Fig 9. Expired credit card error message.</figcaption>
@@ -356,7 +356,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_10.jpg" />
               <figcaption>Fig 10. Asking for user data.</figcaption>
@@ -393,7 +393,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img class="framed" src="../images/duxwc/duxwc_11.jpg" />
               <figcaption>Fig 11. Microcontent displayed in a Google search.</figcaption>
@@ -434,7 +434,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_12.jpg" />
               <figcaption>Fig 12. Error message for a name input field.</figcaption>
@@ -484,7 +484,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_13.jpg" />
               <figcaption>Fig 13. Push notification for a delivery schedule management app.
@@ -515,7 +515,7 @@
           <br>
           <p><strong>Solution:</strong></p>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_14.jpg" />
               <figcaption>Fig 14. Unknown error message for an price-comparison app.</figcaption>
@@ -567,7 +567,7 @@
           <p><strong>Solution & Explanation:</strong></p>
           <br>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_15a.jpg" />
               <figcaption>Fig 15a. Onboarding introduction.</figcaption>
@@ -580,7 +580,7 @@
             verified personal information.</p>
           <br>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_15b.jpg" />
               <figcaption>Fig 15b. Onboarding introduction.</figcaption>
@@ -595,7 +595,7 @@
             are also reminded that any account is still subject to the overdraft policies.</p>
           <br>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_15c.jpg" />
               <figcaption>Fig 15c1. Onboarding introduction.</figcaption>
@@ -606,7 +606,7 @@
           </p>
           <br>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_15c2.jpg" />
               <figcaption>Fig 15c2. Onboarding introduction.</figcaption>
@@ -617,7 +617,7 @@
             to keep consistency and familiarity across the feature).</p>
           <br>
           <br>
-          <div class="centered-img-container">
+          <div class="screenshot">
             <figure>
               <img src="../images/duxwc/duxwc_15d.jpg" />
               <figcaption>Fig 15d. Onboarding introduction.</figcaption>
