--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
 
           <div class="project-card clickable-card">
             <a class="project" href="./projects/handshake.html">
-              <img src="./images/handshake.svg" />
+              <img src="./images/handshake/handshake.svg" />
               <h3>Handshake App<br />Final Project - UX Content Collective</h3>
             </a>
           </div>
