--- a/pageComponents.html
+++ b/pageComponents.html
@@ -35,37 +35,44 @@
 
         <main class="mainie">
           <!-- USE THIS SECTION FOR A CONTENT GRID, i.e. LIST OF PROJECTS -->
-          <!-- <section>
+          <section>
             <div class="content-grid">
+
               <div class="image_title">
-                <img class="img landscape" alt="" src="./images/1.jpeg" />
-                <h2>Project Title</h2>
+                <a>
+                  <img class="img landscape" alt="" src="./images/1.jpeg" />
+                  <h2>Project Title</h2>
+                </a>
               </div>
 
               <div class="image_title">
-                <img class="img landscape" alt="" src="./images/1.jpeg" />
-                <h2>Project Title</h2>
+                <a>
+                  <img class="img landscape" alt="" src="./images/1.jpeg" />
+                  <h2>Project Title</h2>
+                </a>
               </div>
 
               <div class="image_title">
-                <img class="img landscape" alt="" src="./images/1.jpeg" />
-                <h2>Project Title</h2>
+                <a>
+                  <img class="img landscape" alt="" src="./images/1.jpeg" />
+                  <h2>Project Title</h2>
+                </a>
               </div>
             </div>
-          </section> -->
+          </section>
 
           <!-- USE THIS SECTION FOR AN ARTICLE, i.e. PROJECT DETAILS, ABOUT ME, RESOURCES -->
-          <section>
+          <!-- <section>
             <article>
               <header class="article-header">
-                <h1>Article Title</h1>
-                <p>Article subtitle.</p>
+                <h1 class="article-title">Article Title</h1>
+                <p class="article-subtitle">Article subtitle.</p>
                 <img class="img" alt="" src="./images/2.jpg" />
               </header>
               <div class="article-body">
                 <div class="body_title_desc">
                   <h2>Major Concept Title</h2>
-                  <p>Description of this aspect of the project.</p>
+                  <p class="body-regular">Description of this aspect of the project.</p>
                 </div>
 
                 <div class="body_image_caption">
@@ -77,23 +84,31 @@
 
                 <div class="body_title_desc">
                   <h2>Major Concept Title</h2>
-                  <p>Description of this aspect of the project. Should be reasonably short but long enough to discuss
-                    the appropriate topic at hand in reasonable detail.</p>
+                  <p class="body-regular">Description of this aspect of the project. Should be reasonably short but long
+                    enough
+                    to discuss the appropriate topic at hand in reasonable detail.</p>
                 </div>
 
                 <div class="body_title_list">
-                  <h2>Major Concept Title</h2>
+                  <h3>Minor Concept Title</h3>
                   <ul class="indent">
-                    <li>Competitive Analysis</li>
-                    <li>Content Design</li>
-                    <li>Microcopy</li>
+                    <li class="body-regular">Competitive Analysis</li>
+                    <li class="body-regular">Content Design</li>
+                    <li class="body-regular">Microcopy</li>
                   </ul>
+                </div>
+
+                <div class="link_icon">
+                  <a>
+                    A Link Text.
+                    <img class="il-ic" src="./assets/open-in-new-window.png" />
+                  </a>
                 </div>
 
               </div>
 
             </article>
-          </section>
+          </section> -->
         </main>
       </div>
 
