updated handshake app into new layout

--- a/pageComponents.html
+++ b/pageComponents.html
@@ -35,7 +35,7 @@
 
         <main class="mainie">
           <!-- USE THIS SECTION FOR A CONTENT GRID, i.e. LIST OF PROJECTS -->
-          <section>
+          <!-- <section>
             <div class="content-grid">
 
               <div class="image_title">
@@ -59,68 +59,95 @@
                 </a>
               </div>
             </div>
-          </section>
+          </section> -->
 
           <!-- USE THIS SECTION FOR AN ARTICLE, i.e. PROJECT DETAILS, ABOUT ME, RESOURCES -->
-          <!-- <section>
+          <section>
             <article>
               <header class="article-header">
                 <h1 class="article-title">Article Title</h1>
                 <p class="article-subtitle">Article subtitle.</p>
-                <img class="img" alt="" src="./images/2.jpg" />
+                <!-- <img class="img" alt="" src="./images/2.jpg" /> -->
               </header>
-              <div class="article-body">
+
+              <div class="tri-image-display">
+                <figure>
+                  <img class="img portrait" src="./images/work/handshake/handshake_sign_up_after.svg" />
+                  <figcaption>Fig #. Caption for the BOTTOM L image.</figcaption>
+                </figure>
+                <figure>
+                  <img class="img portrait" src="./images/work/handshake/handshake_sign_in_after.svg" />
+                  <figcaption>Fig #. Caption for the BOTTOM R image. many many many many texts</figcaption>
+                </figure>
+                <figure>
+                  <img class="img portrait" src="./images/work/handshake/handshake_sign_in_up_before.svg" />
+                  <figcaption>Fig #. Caption for the TOP image.</figcaption>
+                </figure>
+              </div>
+
+              <div class="dual-image-display">
+                <figure>
+                  <img class="img portrait" src="./images/work/handshake/handshake_sign_in_up_before.svg" />
+                  <figcaption>Fig #. Caption for the image.</figcaption>
+                </figure>
+                <figure>
+                  <img class="img portrait" src="./images/work/handshake/handshake_sign_in_after.svg" />
+                  <figcaption>Fig #. Caption for the image.</figcaption>
+                </figure>
+              </div>
+
+              <!-- <div class="article-body">
                 <div class="body_title_desc">
                   <h2>Major Concept Title</h2>
                   <p class="body-regular">Description of this aspect of the project.</p>
-                </div>
+                </div> -->
 
-                <div class="body_image_caption">
+              <!-- <div class="body_image_caption">
                   <figure>
                     <img class="img" src="./images/1.jpeg" />
                     <figcaption>Fig #. Caption for the image.</figcaption>
                   </figure>
-                </div>
+                </div> -->
 
-                <div class="body_title_desc">
+              <!-- <div class="body_title_desc">
                   <h2>Major Concept Title</h2>
                   <p class="body-regular">Description of this aspect of the project. Should be reasonably short but long
                     enough
                     to discuss the appropriate topic at hand in reasonable detail.</p>
-                </div>
+                </div> -->
 
-                <div class="body_title_list">
+              <!-- <div class="body_title_list">
                   <h3>Minor Concept Title</h3>
                   <ul class="indent">
                     <li class="body-regular">Competitive Analysis</li>
                     <li class="body-regular">Content Design</li>
                     <li class="body-regular">Microcopy</li>
                   </ul>
-                </div>
+                </div> -->
 
-                <div class="link_icon">
+              <!-- <div class="link_icon">
                   <a>
                     A Link Text.
                     <img class="il-ic" src="./assets/open-in-new-window.png" />
                   </a>
-                </div>
+                </div> -->
 
-              </div>
-
-            </article>
-          </section> -->
-        </main>
       </div>
 
-      <footer class="footie">
-        <div class="socials-links">
-          <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="./assets/LI-In-Bug.png"></a>
-          <a href="https://github.com/EvyHaan"><img class="social-icon" src="./assets/GitHub-Mark-64px.png"></a>
-        </div>
-      </footer>
-
-
+      </article>
+      </section>
+      </main>
     </div>
+
+    <footer class="footie">
+      <div class="socials-links">
+        <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="./assets/LI-In-Bug.png"></a>
+        <a href="https://github.com/EvyHaan"><img class="social-icon" src="./assets/GitHub-Mark-64px.png"></a>
+      </div>
+    </footer>
+
+
+  </div>
   </div>
 </body>
 
