--- a/pageComponents.html
+++ b/pageComponents.html
@@ -23,8 +23,8 @@
       <div class="therest">
         <header class="headie">
           <nav class="site-nav">
-            <a class="site-nav-item">work</a>
-            <a class="site-nav-item">about</a>
+            <a class="site-nav-item" href="../index.html">work</a>
+            <a class="site-nav-item" href="../about.html">about</a>
             <!-- <a class="site-nav-item">resources</a> -->
           </nav>
           <div class="site-header">
@@ -35,39 +35,26 @@
 
         <main class="mainie">
           <!-- USE THIS SECTION FOR A CONTENT GRID, i.e. LIST OF PROJECTS -->
-          <!-- <section>
+          <section>
             <div class="content-grid">
 
               <div class="image_title">
-                <a>
-                  <img class="img landscape" alt="" src="./images/1.jpeg" />
-                  <h2>Project Title</h2>
+                <a href="./work/handshake_mobile_app.html">
+                  <img class="img landscape" alt="" src="./images/handshake/handshake.svg" />
+                  <h2>Handshake Mobile App</h2>
                 </a>
               </div>
 
-              <div class="image_title">
-                <a>
-                  <img class="img landscape" alt="" src="./images/1.jpeg" />
-                  <h2>Project Title</h2>
-                </a>
-              </div>
-
-              <div class="image_title">
-                <a>
-                  <img class="img landscape" alt="" src="./images/1.jpeg" />
-                  <h2>Project Title</h2>
-                </a>
-              </div>
             </div>
-          </section> -->
+          </section>
 
           <!-- USE THIS SECTION FOR AN ARTICLE, i.e. PROJECT DETAILS, ABOUT ME, RESOURCES -->
-          <section>
+          <!-- <section>
             <article>
               <header class="article-header">
                 <h1 class="article-title">Article Title</h1>
                 <p class="article-subtitle">Article subtitle.</p>
-                <!-- <img class="img" alt="" src="./images/2.jpg" /> -->
+                <img class="img" alt="" src="./images/2.jpg" />
               </header>
 
               <div class="tri-image-display">
@@ -96,58 +83,56 @@
                 </figure>
               </div>
 
-              <!-- <div class="article-body">
+              <div class="article-body">
                 <div class="body_title_desc">
                   <h2>Major Concept Title</h2>
                   <p class="body-regular">Description of this aspect of the project.</p>
-                </div> -->
+                </div>
 
-              <!-- <div class="body_image_caption">
+              <div class="body_image_caption">
                   <figure>
                     <img class="img" src="./images/1.jpeg" />
                     <figcaption>Fig #. Caption for the image.</figcaption>
                   </figure>
-                </div> -->
+                </div>
 
-              <!-- <div class="body_title_desc">
+              <div class="body_title_desc">
                   <h2>Major Concept Title</h2>
                   <p class="body-regular">Description of this aspect of the project. Should be reasonably short but long
                     enough
                     to discuss the appropriate topic at hand in reasonable detail.</p>
-                </div> -->
+                </div>
 
-              <!-- <div class="body_title_list">
+              <div class="body_title_list">
                   <h3>Minor Concept Title</h3>
                   <ul class="indent">
                     <li class="body-regular">Competitive Analysis</li>
                     <li class="body-regular">Content Design</li>
                     <li class="body-regular">Microcopy</li>
                   </ul>
-                </div> -->
+                </div>
 
-              <!-- <div class="link_icon">
+              <div class="link_icon">
                   <a>
                     A Link Text.
                     <img class="il-ic" src="./assets/open-in-new-window.png" />
                   </a>
-                </div> -->
+                </div>
 
+            </article>
+          </section> -->
+        </main>
       </div>
 
-      </article>
-      </section>
-      </main>
+      <footer class="footie">
+        <div class="socials-links">
+          <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="./assets/LI-In-Bug.png"></a>
+          <a href="https://github.com/EvyHaan"><img class="social-icon" src="./assets/GitHub-Mark-64px.png"></a>
+        </div>
+      </footer>
+
+
     </div>
-
-    <footer class="footie">
-      <div class="socials-links">
-        <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="./assets/LI-In-Bug.png"></a>
-        <a href="https://github.com/EvyHaan"><img class="social-icon" src="./assets/GitHub-Mark-64px.png"></a>
-      </div>
-    </footer>
-
-
-  </div>
   </div>
 </body>
 
