--- a/work/duxwc_day1.html
+++ b/work/duxwc_day1.html
@@ -71,7 +71,7 @@
                   <div class="dual-image-display">
                     <figure>
                       <img class="img portrait" src="../images/work/duxwc/duxwc_1_push.jpg" />
-                      <figcaption>Caption for the image.</figcaption>
+                      <figcaption>Flight cancellation push notification.</figcaption>
                     </figure>
                   </div>
 
@@ -93,9 +93,8 @@
                   </ul>
 
                   <p class="body-regular">There may not always be a reason ‘why’ that the airline can share with the
-                    customer. For inclement
-                    weather, it does feel appropriate. It provides the customer an important context that may factor
-                    into how to proceed with making new arrangements.
+                    customer. For inclement weather, it does feel appropriate. It provides the customer an important
+                    context that may factor into how to proceed with making new arrangements.
                   </p>
 
                   <p class="body-regular">The last two ideas are dependent on what the airline process may be. As a UX
